[gd_scene load_steps=13 format=2]

[ext_resource path="res://Media/FixedDays Font/Text_Default.tres" type="DynamicFont" id=1]
[ext_resource path="res://GameSrc/PatnicRoom/scenes/Unique/Titlescreen/SubScene/create new game/create new game alt.gd" type="Script" id=2]
[ext_resource path="res://Media/temp/HUD_BLUE.tres" type="StyleBox" id=3]
[ext_resource path="res://GameSrc/PatnicRoom/scenes/Unique/Titlescreen/SubScene/create new game/Button.gd" type="Script" id=4]
[ext_resource path="res://Media/FixedDays Font/new_dynamicfontdata.tres" type="DynamicFontData" id=6]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 0.592157, 0.643137, 0.764706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="StyleBoxFlat" id=2]
bg_color = Color( 0.592157, 0.643137, 0.764706, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.196078, 0.196078, 0.196078, 1 )
corner_radius_top_left = 5
corner_radius_top_right = 5
corner_radius_bottom_right = 5
corner_radius_bottom_left = 5

[sub_resource type="DynamicFont" id=3]
size = 15
font_data = ExtResource( 6 )

[sub_resource type="StyleBoxFlat" id=4]
bg_color = Color( 0.14902, 0.14902, 0.14902, 1 )
border_width_left = 3
border_width_top = 3
border_width_right = 3
border_width_bottom = 3
border_color = Color( 0.968627, 0.0823529, 0.0823529, 1 )

[sub_resource type="StyleBoxFlat" id=5]
bg_color = Color( 0.729412, 0.231373, 0.231373, 1 )

[sub_resource type="StyleBoxFlat" id=6]
bg_color = Color( 0.8, 0.0666667, 0.0666667, 0.521569 )

[sub_resource type="StyleBoxFlat" id=7]
bg_color = Color( 0.6, 0.6, 0.6, 0 )

[node name="root_Create" type="Node2D"]
script = ExtResource( 2 )
__meta__ = {
"_edit_horizontal_guides_": [  ]
}

[node name="Panel2" type="Panel" parent="."]
margin_left = 392.0
margin_top = 392.0
margin_right = 1352.0
margin_bottom = 944.0
custom_styles/panel = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Name" type="Control" parent="Panel2"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel2/Name"]
margin_left = 32.0
margin_top = 32.0
margin_right = 288.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "My Name is"
text = "My Name is"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel" type="Panel" parent="Panel2/Name"]
margin_left = 376.0
margin_top = 32.0
margin_right = 648.0
margin_bottom = 72.0
custom_styles/panel = SubResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="input" type="RichTextLabel" parent="Panel2/Name"]
margin_left = 384.0
margin_top = 32.0
margin_right = 640.0
margin_bottom = 72.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Chummer"
text = "Chummer"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Race" type="Control" parent="Panel2"]
margin_top = 56.0
margin_right = 40.0
margin_bottom = 96.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Panel2/Race"]
margin_left = 376.0
margin_top = 48.0
margin_right = 648.0
margin_bottom = 85.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel2/Race"]
margin_left = 32.0
margin_top = 48.0
margin_right = 272.0
margin_bottom = 88.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "I am a"
text = "I am a"

[node name="toString" type="RichTextLabel" parent="Panel2/Race"]
margin_left = 656.0
margin_top = 32.0
margin_right = 1040.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="kits" type="Control" parent="Panel2"]
margin_top = 128.0
margin_right = 40.0
margin_bottom = 168.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="OptionButton" type="OptionButton" parent="Panel2/kits"]
margin_left = 376.0
margin_top = 48.0
margin_right = 648.0
margin_bottom = 85.0
custom_styles/normal = SubResource( 2 )
custom_fonts/font = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Panel2/kits"]
margin_left = 32.0
margin_top = 48.0
margin_right = 368.0
margin_bottom = 88.0
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "Trying to survive with"
text = "Trying to survive with"

[node name="toString" type="RichTextLabel" parent="Panel2/kits"]
margin_left = 656.0
margin_top = 32.0
margin_right = 1040.0
margin_bottom = 72.0
custom_fonts/normal_font = SubResource( 3 )
bbcode_enabled = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="start" type="Panel" parent="."]
visible = false
margin_left = 984.0
margin_top = 952.0
margin_right = 1352.0
margin_bottom = 1048.0
custom_styles/panel = SubResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Arrow" type="Control" parent="start"]
margin_right = 40.0
margin_bottom = 40.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="0" type="Control" parent="start/Arrow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel3" type="Panel" parent="start/Arrow/0"]
margin_left = 23.071
margin_top = 12.0
margin_right = 75.071
margin_bottom = 22.0
rect_rotation = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel4" type="Panel" parent="start/Arrow/0"]
margin_left = 18.071
margin_top = 76.0
margin_right = 67.071
margin_bottom = 86.0
rect_rotation = -45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="1" type="Control" parent="start/Arrow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel5" type="Panel" parent="start/Arrow/1"]
margin_left = 55.071
margin_top = 12.0
margin_right = 107.071
margin_bottom = 22.0
rect_rotation = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel6" type="Panel" parent="start/Arrow/1"]
margin_left = 50.071
margin_top = 76.0
margin_right = 99.071
margin_bottom = 86.0
rect_rotation = -45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="2" type="Control" parent="start/Arrow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel7" type="Panel" parent="start/Arrow/2"]
margin_left = 87.071
margin_top = 12.0
margin_right = 139.071
margin_bottom = 22.0
rect_rotation = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel8" type="Panel" parent="start/Arrow/2"]
margin_left = 82.071
margin_top = 76.0
margin_right = 131.071
margin_bottom = 86.0
rect_rotation = -45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="3" type="Control" parent="start/Arrow"]
margin_right = 40.0
margin_bottom = 40.0

[node name="Panel9" type="Panel" parent="start/Arrow/3"]
margin_left = 119.071
margin_top = 12.0
margin_right = 171.071
margin_bottom = 22.0
rect_rotation = 45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Panel10" type="Panel" parent="start/Arrow/3"]
margin_left = 114.071
margin_top = 76.0
margin_right = 163.071
margin_bottom = 86.0
rect_rotation = -45.0
custom_styles/panel = SubResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="start"]
margin_left = 168.0
margin_top = 15.0
margin_right = 264.0
margin_bottom = 51.0
rect_scale = Vector2( 2, 2 )
custom_fonts/normal_font = ExtResource( 1 )
bbcode_enabled = true
bbcode_text = "[center]P[color=red]@[/color]ANIC[/center]"
text = "P@ANIC"
scroll_active = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Hover zone" type="Button" parent="start"]
margin_right = 368.0
margin_bottom = 96.0
custom_styles/hover = SubResource( 6 )
custom_styles/normal = SubResource( 7 )
script = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[connection signal="item_selected" from="Panel2/Race/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="item_selected" from="Panel2/kits/OptionButton" to="." method="_on_OptionButton_item_selected"]
[connection signal="pressed" from="start/Hover zone" to="start/Hover zone" method="_on_Button_pressed"]
